gtk3: Fix colorswatch focus outline colors
Ensure the outline of focused swatches remains visible over any
swatch color, by styling it separately for dark and light swatches.

Using the overlay tick color with more transparency makes sense, is
not too far from the normal focused outline style, and is similar to
what upstream did with Adwaita.

--- a/common/gtk-3.0/3.22/sass/_common.scss
+++ b/common/gtk-3.0/3.22/sass/_common.scss
@@ -3010,16 +3010,24 @@ colorswatch {
     }
   }
 
-  &.dark overlay {
-    color: transparentize(white, 0.3);
-    &:hover {
-      border-color: if($variant != 'dark', transparentize(black, 0.5), $borders_color);
+  &.dark {
+    outline-color: transparentize(white, 0.6);
+
+    overlay {
+      color: transparentize(white, 0.3);
+      &:hover {
+        border-color: if($variant != 'dark', transparentize(black, 0.5), $borders_color);
+      }
     }
   }
-  &.light overlay {
-    color: transparentize(black, 0.3);
-    &:hover {
-      border-color: if($variant != 'dark', transparentize(black, 0.7), $borders_color);
+  &.light {
+    outline-color: transparentize(black, 0.6);
+
+    overlay {
+      color: transparentize(black, 0.3);
+      &:hover {
+        border-color: if($variant != 'dark', transparentize(black, 0.7), $borders_color);
+      }
     }
   }
 
